...
                    android:maxLines="1"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                style="@style/viewParent"
                android:id="@+id/link_ForgetP"
                android:text="Forgot Password?"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/newsMoreTextSize"
                android:layout_gravity="end"

                android:layout_marginTop="10dp"/>
...
